--- a/client/src/users/pages/UserProfile.css
+++ b/client/src/users/pages/UserProfile.css
@@ -141,6 +141,9 @@
   align-items: center;
   padding: 10px;
 }
+.profile-title .icon-inbox{
+  font-size: 25px;
+}
 .profile_categories-item.added {
   background-color: rgba(45, 169, 145, 0.6);
 }
